--- a/Pagina3/assets/css/Google-Style-Text-Input.css
+++ b/Pagina3/assets/css/Google-Style-Text-Input.css
@@ -7,6 +7,7 @@ input {
   font-size: 18px;
   padding: 10px 10px 10px 5px;
   display: block;
+  margin: 0 auto;
   width: 300px;
   border: none;
   border-bottom: 1px solid #757575;
@@ -20,11 +21,21 @@ label {
   color: #999;
   font-size: 18px;
   font-weight: normal;
-  position: absolute;
+  /* position: absolute; */
   pointer-events: none;
   left: 5px;
   top: 10px;
   transition: 0.2s ease all;
+}
+
+select {
+  font-size: 18px;
+  padding: 10px 10px 10px 5px;
+  display: block;
+  margin: 0 auto;
+  width: 300px;
+  border: none;
+  border-bottom: 1px solid #757575;
 }
 
 input:focus ~ label, input:valid ~ label {
