--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,53 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+.masthead {
+  height: 70vh;
+  min-height: 500px;
+  background-image:
+    linear-gradient(90deg, rgba(209,10,1, 0.32), rgba(255, 162,47, 0.53)),
+    url(../img/defqonend_hl.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.footer {
+  position: absolute;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+}
+
+.zoom {
+  transition: transform .4s;
+}
+
+.zoom:hover {
+  transform: scale(1.1);
+}
+
+.form-control {
+  border: none;
+  border-radius: 30px;
+  border-bottom: 1px solid #F2F2F2;
+  background-color: #F2F2F2;
+}
+
+.form-control::placeholder {
+  font-size: 13px;
+  color: #C2C2CC;
+}
+
+.form-control:focus {
+  box-shadow: none;
+  border-bottom: 1px solid #F2F2F2;
+  background-color: #F2F2F2;
+}
+
+
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
